--- a/styles/index.css
+++ b/styles/index.css
@@ -41,21 +41,78 @@ body{
     align-items: center;
 }
 .form-container{
-    margin: 2rem 0 0 0;
-    min-width: 90vw;
-    height: 90vh;
     border-radius: var(--br);
     background-color: var(--neutral-clr-white);
-}
-input{
-    width: 10%;
-}
-label{
     font-family: var(--ff-Karla);
+    height: 95vh;
+    min-width: 95%;
+    margin: 1rem 0 -1rem 0;
+}
+.content-wrapper{
+    margin: 0 1.5rem 0 1.5rem;   
+}
+h1{
+    font-size: 30px;
+    margin: 1rem 0 1.5rem 0;
+}
+h2{
+    font-size: inherit;
+    font-weight: inherit;
+    color: var(--neutral-clr-grey-900);
+    margin: 1rem 0 1.5rem 0;
+}
+label{    
+    display: flex;
+    margin: 1.5rem 0 .5rem 0;
     font-size: var(--fs-label);
     font-weight: var(--fw-regular);
+    color: var(--neutral-clr-grey-900);
+    
 }
-
+input[type=text]{
+    width: 100%;
+    height: 3rem;
+    border: 1px var(--neutral-clr-grey-500) solid;
+    border-radius: var(--br);
+}
+input[type=radio] + label{
+    display: inline-flex;
+    margin: 1rem 0 1rem 0;
+}
+input[type=radio] {
+    border: 0px;
+    margin: 0 .5rem 0 0;    
+    height: 1rem;
+    width: 1rem;
+}
+.general-radio, .support-radio {
+    position: relative;
+    top: -1px;
+}
+.radio-wrapper{
+    padding: 0 0 0 1.5rem;
+    border: 1px var(--neutral-clr-grey-500) solid;
+    border-radius: var(--br);
+    margin: 0 0 1rem 0;
+}
+#message{
+    height: 15rem;
+}
+input[type=checkbox] + label{
+    display: inline-flex;
+    margin: 0 0 0 .5rem;
+}
+.submit-button{
+    width: 100%;
+    height: 3rem;
+    background-color: var(--primary-clr-green-600);
+    border: 1px var(--primary-clr-green-600) solid;
+    border-radius: var(--br);
+    color: var(--neutral-clr-white);
+    font-family: inherit;
+    font-size: inherit;
+    font-weight: inherit;
+}
 .required, .required-email-text, .required-query-radio,
  .required-consent-form, .success-toast{
     display: none;
@@ -63,6 +120,7 @@ label{
 .attribution { 
     font-size: 11px; 
     text-align: center; 
+    display: none;
 }
 .attribution a { 
     color: hsl(228, 45%, 44%); 
