--- a/styles/index.css
+++ b/styles/index.css
@@ -8,6 +8,8 @@
 }
 * {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 :root {
     /* colors */
@@ -34,8 +36,6 @@
 }
 body{
     background-color: var(--primary-clr-green-200);
-}
-.wrapper{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -44,8 +44,10 @@ body{
     border-radius: var(--br);
     background-color: var(--neutral-clr-white);
     font-family: var(--ff-Karla);
-    height: 125vh;
-    min-width: 95%;
+    min-height: 80vh;
+    max-height: 155vh;
+    min-width: 350px;
+    max-width: 600px;
     margin: 1rem 1rem 1rem 1rem;
 }
 .content-wrapper{
@@ -118,7 +120,6 @@ input[type=checkbox] {
     margin: -.5rem 1rem 0 0;      
     width: 25px;
 }        
-   
 .submit-button{
     width: 100%;
     height: 3rem;
@@ -129,7 +130,7 @@ input[type=checkbox] {
     font-family: inherit;
     font-size: inherit;
     font-weight: inherit;
-    margin: 2.5rem 0 0 0;
+    margin: 2rem 0 2rem 0;
 }
 .required, .required-email-text, .required-query-radio,
  .required-consent-form, .success-toast{
@@ -143,21 +144,25 @@ input[type=checkbox] {
 .attribution a { 
     color: hsl(228, 45%, 44%); 
 }
-
 @media only screen and (min-width: 600px) {
-    .wrapper{
-        background-color: lightpink;
+    body{
+        height: 100vh;
     }
-    .name-container{
-        display: inline-flex;
+    .content-wrapper{
+        margin: 0 2rem 0 2rem;   
     }
-    .name-container label{
-        display: inline-flex;
-        background-color: red;
+    .name-container, .radio-group-container {
+    display: inline-flex;
+    gap: 1rem;
+    width: 100%;
+    margin: -2rem 0 0 0;
     }
-    #fname-text{
-        
+    .name-group, .radio-wrapper{
+    width: 100%;
+    margin: 1.5rem 0 0 0;
     }
-    #lname-text{
+    #message{
+    height: 8rem;
+    margin: 0 0 3rem 0;
     }
-  }
+}
