--- a/styles/index.css
+++ b/styles/index.css
@@ -130,7 +130,7 @@ input[type=checkbox] {
     font-weight: inherit;
     margin: 2rem 0 2rem 0;
 }
-.required, .required-query-radio, .required-consent-form{
+.required{
     color: var(--primary-clr-red);
     display: none;
 }
