--- a/styles/index.css
+++ b/styles/index.css
@@ -45,7 +45,7 @@ body{
     border-radius: var(--br);
     background-color: var(--neutral-clr-white);
     font-family: var(--ff-Karla);
-    max-height: 155vh;
+    max-height: auto; /* debug later */
     min-width: 350px;
     max-width: 600px;
     margin: 1rem 1rem 1rem 1rem;    
