--- a/styles/index.css
+++ b/styles/index.css
@@ -153,10 +153,7 @@ input[type=checkbox]:checked {
     background: url('/assets/images/icon-checkbox-check.svg');
 }  
 #general-radio:checked, #support-radio:checked{
-    appearance: none;
-    background-image: url('/assets/images/icon-radio-selected.svg');
-    background-size: contain; 
-    background-repeat: no-repeat;
+    accent-color: var(--primary-clr-green-600);
 }
 .submit-button{
     width: 100%;
@@ -210,6 +207,8 @@ input[type=checkbox]:checked {
     margin-right: 10px; 
 }
 .required-email-text{
+    margin: 1em 0 0 0;
+    color: var(--primary-clr-red);
     display: none;
 }
 .attribution { 
