--- a/styles/index.css
+++ b/styles/index.css
@@ -150,7 +150,7 @@ input[type=checkbox] {
 }   
 input[type=checkbox]:checked {    
     border: 1px solid var(--neutral-clr-white);
-    background: url('/assets/images/icon-checkbox-check.svg');
+    background: url('./assets/images/icon-checkbox-check.svg');
 }  
 #general-radio:checked, #support-radio:checked{
     accent-color: var(--primary-clr-green-600);
